--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,6 @@
   "tabWidth": 2,
   "singleQuote": true,
   "semi": false,
-  "proseWrap": "never",
-  "bracketSpacing": true
+  "proseWrap": "preserve",
+  "bracketSpacing": false
 }
