--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "iview": "^3.0.1",
     "socket.io": "^2.2.0",
     "vue": "^2.6.6",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
