--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "socket.io": "^2.2.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
-    "wangeditor": "^3.1.1"
+    "wangeditor": "^3.1.1",
+    "xlsx": "^0.14.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
